<resources>
    <string name="app_name">Student Management System</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to Student Management System</string>

    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="add_student_fragment_label">Add Student Fragment</string>

    <string name="add_new_student">Add New Student</string>
    <string name="all_students">View All students</string>

    <!-- Strings used for fragments Add Student -->
    <string name="student_name">Student Name</string>
    <string name="student_score">Student Score</string>
    <string name="add">Add</string>
    <string name="add_new_student_successfully">You have just added new student successfully</string>

    <!-- Strings used for fragments Main -->
    <string-array name="storage_student_name">
        <item>Nguyen Van A</item>
        <item>Tran Dang C</item>
        <item>Le Thi X</item>
        <item>Phung Van T</item>
        <item>Cao Van L</item>
        <item>Nguyen Tran Mai T</item>
        <item>Hoang Van M</item>
    </string-array>

    <string-array name="storage_student_score">
        <item>8</item>
        <item>10</item>
        <item>6</item>
        <item>6</item>
        <item>5</item>
        <item>9</item>
        <item>7</item>
    </string-array>

    <string name="score">Score: </string>

</resources>